<resources>
    <string name="app_name">畅游</string>
    <string name="action_share">分享</string>
    <string name="open">open</string>
    <string name="close">close</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="tabs">
        <item>推荐</item>
        <item>旅伴</item>
        <item>目的地</item>
        <item>发文</item>
        <item>我的</item>
    </string-array>
    <string name="tab1">推荐</string>
    <string name="tab2">旅伴</string>
    <string name="tab3">足迹</string>
    <string name="tab4">目的地</string>
    <string name="tab5">我的</string>

    <string name="title_activity_spot_detail">详情</string>
    <string name="title_activity_login">登录</string>

    <!-- Strings related to login -->
    <string name="prompt_email">邮件</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_register">注册</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_email">邮件密码错误</string>
    <string name="error_invalid_password">此密码太短</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_field_required">必填项</string>
    <string name="permission_rationale">
    </string>
    <string name="title_activity_splash"> </string>

    <string name="logout">退出</string>
    <string name="title_activity_send_text">游记</string>
    <string name="title_activity_pic">选择图片</string>
    <string name="search_title">搜索</string>
    <string name="share_sina_strings">微博分享</string>
    <string name="share_qq_strings">QQ分享</string>
    <string name="search_hint">输入搜索内容</string>
    <string name="title_activity_search">搜索</string>
    <string name="title_activity_send">发布</string>
    <string name="action_add">发布</string>
    <string name="title_activity_push">PushActivity</string>
    <string name="action_add_post">发布游记</string>
    <string name="action_add_tour">发布旅行</string>
    <string name="action_add_friends">添加好友</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="original_password">原密码</string>
    <string name="new_password">新密码</string>
    <string name="card_string">Also under the bed is a book with a note written to Robyn (Rihanna’s real name), telling her, “There’s gold in your voice. Follow it.” Two children are playing the piano in another clue video, and a little girl with a crown over her eyes enters the room. What does it all mean?!</string>
</resources>
