<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_add_white_36dp"
        android:title="@string/action_add"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/action_add_post"
                android:orderInCategory="100"
                android:title="@string/action_add_post"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_add_tour"
                android:orderInCategory="101"
                android:title="@string/action_add_tour"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_add_friends"
                android:orderInCategory="102"
                android:title="@string/action_add_friends"
                app:showAsAction="never" />
        </menu>

    </item>
    <item
        android:id="@+id/action_share"
        android:orderInCategory="100"
        android:title="@string/action_share"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search_white_36dp"
        android:imeOptions="actionSearch"
        android:title="@string/search_title"
        app:showAsAction="ifRoom" />
</menu>
